Update using uuid for model, viewmodel and fix test
