# src/view-models/customer-create.view-model.go
@@ -1,0 +1,9 @@
+package viewmodels
+
+type CustomerCreateViewModel struct {
+	Name      string
+	Role      string
+	Email     string
+	Phone     string
+	Contacted bool
+}
