# src/view-models/customer.view-model.go
@@ -1,8 +1,8 @@
-package models
+package viewmodels
 
 import "github.com/google/uuid"
 
-type Customer struct {
+type CustomerViewModel struct {
 	ID        uuid.UUID
 	Name      string
 	Role      string
